docs: update README with Parquet support documentation
Added comprehensive Parquet documentation:
- Updated feature list to include Parquet support
- Added Parquet usage examples with security manager flag
- Documented compression options (snappy, gzip, lzo, brotli, zstd)
- Included type mapping table (slatr -> Parquet types)
- Added Spark integration example
- Updated architecture diagram to include Parquet converter
- Updated roadmap: Phase 2 marked complete

Note: Java 18+ users need -Djava.security.manager=allow flag